Ulthuan ne zavrsen v1

--- a/southlands.html
+++ b/southlands.html
@@ -69,7 +69,7 @@
             </p>
             <figure id="pozadina_fig">
                 <table>
-                    <tr id="slike">
+                    <tr class="slike">
                         <td><img src="moulder.png"></td>
                         <td><img src="pestilens.png"></td>
                         <td><img src="eshin.png"></td>
