Naggaroth ne zavrsen v1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="old world.html">Old World</a>
         <a href="southlands.html">Southlands</a>
         <a href="ulthuan.html">Ulthuan</a>
-        <a href="naggarond.html">Naggarond</a>
+        <a href="naggaroth.html">Naggaroth</a>
         <a href="lustria.html">Lustria</a>
       </nav>
 </head>
