--- a/ulthuan.html
+++ b/ulthuan.html
@@ -14,7 +14,7 @@
         <a href="old world.html">Old World</a>
         <a href="southlands.html">Southlands</a>
         <a class="trenutna" href="ulthuan.html">Ulthuan</a>
-        <a href="naggarond.html">Naggarond</a>
+        <a href="naggaroth.html">Naggaroth</a>
         <a href="lustria.html">Lustria</a>
     </nav>
 </head>
@@ -24,7 +24,7 @@
         <div id="prvi_deo">
             <figure>
                 <img class="slika" src="ulthuan2.jpg">
-                <figcaption>Map of Ulthuan</figcaption>
+                <figcaption><i>MAP OF ULTHUAN</i></figcaption>
             </figure>
             <figure>
                 <blockquote>
@@ -148,7 +148,7 @@
             </p>
             <figure>
                 <img class="slika" src="he vojska.jpg">
-                <figcaption>Army of the High Elves</figcaption>
+                <figcaption>Army of the High Elves led by <i><b>Tyrion, Heir of Aenerion</b></i></figcaption>
             </figure>
         </div>
     </div>
