Lustria ne zavrseni v1

--- a/naggaroth.html
+++ b/naggaroth.html
@@ -19,7 +19,7 @@
     </nav>
 </head>
 <body>
-    <h1>Naggaroth</h1>
+    <h1><b>Naggaroth</b></h1>
     <div class="kontejneri">
         <div id="prvi_deo">
             <figure>
