--- a/old world.html
+++ b/old world.html
@@ -19,7 +19,7 @@
     </nav>
 </head>
 <body>
-    <h1>Old World</h1>
+    <h1><b>Old World</b></h1>
     <div class="kontejneri">
         <div id="prvi_deo">
             <figure>
