--- a/southlands.html
+++ b/southlands.html
@@ -19,7 +19,7 @@
     </nav>
 </head>
 <body>
-    <h1>Southlands</h1>
+    <h1><b>Southlands</b></h1>
     <div class="kontejneri">
         <div id="prvi_deo">
             <figure>
