--- a/ulthuan.html
+++ b/ulthuan.html
@@ -19,7 +19,7 @@
     </nav>
 </head>
 <body>
-    <h1>Ulthuan</h1>
+    <h1><b>Ulthuan</b></h1>
     <div class="kontejneri">
         <div id="prvi_deo">
             <figure>
