Old world popravljen v2

--- a/old world.html
+++ b/old world.html
@@ -127,7 +127,7 @@
                 <blockquote>
                     <i><b>"We sons of Grungni may have drunk deep from the bitter waters of misfortune, but we yet survive. Whilst a single Dwarf draws breath, we will fight the evils that assail us, and we will never, ever give up."</b></i>
                 </blockquote>
-                <figcaption><cite>Hengist Stonebelly, Dwarf Longbeard</cite></figcaption>
+                <figcaption><cite><i>Hengist Stonebelly, Dwarf Longbeard</i></cite></figcaption>
             </figure>
         </div>
     </div>
