Sajt upgrade-ovan v1

--- a/index.html
+++ b/index.html
@@ -53,42 +53,26 @@
             <p>
                 The Warp Gates collapsed in an epoch-shattering explosion, flattening continents and replacing the constructions with massive seas of boiling <b><i>Chaos</i></b> where reality and the aethyr overlapped. Hordes of daemonic creatures charged into the world and slaughtered the Old Ones, bringing their shining civilisation to its knees.
             </p>
-            <div class="xop-section">
-                <ul class="xop-grid">
-                  <li>
-                    <div class="xop-box xop-img-1">
-                      <img src="khorne.jpg" width="350px" height="350px">
-                      <div class="xop-info">
-                        <h3>Khorne</h3>
-                      </div></a>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="xop-box xop-img-2">
-                      <img src="nurgle.jpg" width="350px" height="350px">
-                      <div class="xop-info">
-                        <h3>Nurgle</h3>
-                      </div></a>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="xop-box xop-img-3">
-                      <img src="tzeentch.jpg" width="350px" height="350px">
-                      <div class="xop-info">
-                        <h3>Tzeentch</h3>
-                      </div></a>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="xop-box xop-img-4">
-                      <img src="slaanesh.jpg" width="350px" height="350px">
-                      <div class="xop-info">
-                        <h3>Slaanesh</h3>
-                      </div></a>
-                    </div>
-                  </li>
-                </ul>
-              </div>
+            <figure>
+              <table id="pocetna">
+                <tr>
+                  <td><img src="khorne.jpg"></td>
+                  <td><img src="nurgle.jpg"></td>
+                </tr>
+                <tr>
+                  <td>Khorne, Chaos God of War, Honor, Courage, Rage, Strength and Hate</td>
+                  <td>Nurgle, Chaos God of Disease, Decay, Destruction, and Death by Rebirth</td>
+                </tr>
+                <tr>
+                  <td><img src="tzeentch.jpg"></td>
+                  <td><img src="slaanesh.jpg"></td>
+                </tr>
+                <tr>
+                  <td>Tzeentch, Chaos God of Magic, Change, Evolution, Destiny, Lies and Trickery</td>
+                  <td>Slaanesh, Chaos God of Pleasure, Passion, Excess and Decadence</td>
+                </tr>
+              </table>
+            </figure>
             <p> 
                 It was later revealed by the <b><i>Elven goddess Lileath</i></b>, that the whole world is doomed to fall. No matter what the mortal nations of the world do, Chaos will inevitably triumph. This is a part of a great cycle that has repeated itself since the dawn of time.
                 A Creator arises and gives life to a barren world, then his family quarrels, culminating in blows that disrupt the world's precious balance and allows Chaos to pour in through the wounds, inevitably consuming it once more. 
