Sajt upgrade-ovan v2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Warhammer Fantasy</title>
       <nav id="navigacija">
-        <a class="trenutna" href="index.html">Home Page</a>
+        <a class="trenutna">Home Page</a>
         <a href="old world.html">Old World</a>
         <a href="southlands.html">Southlands</a>
         <a href="ulthuan.html">Ulthuan</a>
